--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -1488,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "id": "902c1135",
    "metadata": {},
    "outputs": [
@@ -1498,14 +1498,14 @@
        "0.7368220127747351"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.metrics import mean_squared_error # ❶\n",
-    "rmse = mean_squared_error(y_test, pred) ** 0.5\n",
+    "# rmse = mean_squared_error(y_test, pred) ** 0.5\n",
     "\n",
     "model.score(X_train, y_train)"
    ]
