로지스틱 회귀

--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -2278,7 +2278,13 @@
    "id": "8fd03758",
    "metadata": {},
    "source": [
-    "모델의 정확성이 0.78에서 0.79로 증가했다."
+    "모델의 정확성이 0.78에서 0.79로 증가했다.\n",
+    "\n",
+    "여기에서는 0.5를 기준으로 0과 1로 분류했다.\n",
+    "\n",
+    "그러나 다른 기준값을 대상으로 분류도 가능하다.\n",
+    "\n",
+    "LightGBM을 활용해 0.5가 아닌 다른 기준값으로 분류하는 실습도 가능하다."
    ]
   }
  ],
